vweb/vweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vweb
  labels:
    project: snapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vweb
  template:
    metadata:
      labels:
        app: vweb
        version: v1
    spec:
      serviceAccountName: vweb-service-account
      containers:
        - name: web
          image: kiamol/ch09-vweb:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
