vweb/vweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vweb
  labels:
    project: snapp
spec:
  ports:
    - port: 8090
      targetPort: http
  selector:
    app: vweb
